--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,8 +26,11 @@
   <div class="content">
     <h3>bienvenido a HealthTest</h3>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem sed autem
-      vero? Magnam, est laboriosam!
+      <strong>¡Felicidades!</strong> Estas a punto de embarcarte en el viaje más
+      increíble; un viaje de crecimiento personal. Por ello HealthTest es un
+      excelente lugar para comenzar su viaje hacia la felicidad y el bienestar
+      emocional. Té invitamos a dar el primer paso hacia el bienestar iniciando
+      una terapia individual en un ambiente tranquilo, seguro y confortable.
     </p>
     <a href="#" class="btn">
       contact us <span class="fas fa-chevron-right"></span>
@@ -41,107 +44,39 @@
 
 <section class="icons-container">
   <div class="icons">
-    <i class="fas fa-user-md"></i>
-    <h3>140+</h3>
-    <p>doctors at work</p>
+    <img style="width: 5em" src="../assets/img/thinkfrase.png" />
+    <h4 style="font-size: 1.5rem">
+      “Si dominamos nuestra mente, vendrá la felicidad.”
+    </h4>
+    <p>Dalai Lama</p>
   </div>
 
   <div class="icons">
-    <i class="fas fa-users"></i>
-    <h3>1040+</h3>
-    <p>satisfied patients</p>
+    <img style="width: 5em" src="../assets/img/thinkfrase.png" />
+    <h4 style="font-size: 1.5rem">
+      "No es el estrés lo que nos mata, es nuestra reacción al mismo."
+    </h4>
+    <p>Hans Selye</p>
   </div>
 
   <div class="icons">
-    <i class="fas fa-procedures"></i>
-    <h3>500+</h3>
-    <p>bed facility</p>
+    <img style="width: 5em" src="../assets/img/thinkfrase.png" />
+    <h4 style="font-size: 1.5rem">
+      "En la vida hay tiempo para todo, menos para rendirse."
+    </h4>
+    <p>Isidre Esteve</p>
   </div>
 
   <div class="icons">
-    <i class="fas fa-hospital"></i>
-    <h3>80+</h3>
-    <p>available hospitals</p>
+    <img style="width: 5em" src="../assets/img/thinkfrase.png" />
+    <h4 style="font-size: 1.5rem">
+      "El éxito es la suma de pequeños esfuerzos repetidos día tras día."
+    </h4>
+    <p>Robert Collier</p>
   </div>
 </section>
 
 <!-- icons section ends -->
-
-<!-- services section starts  -->
-
-<section class="services" id="services">
-  <h1 class="heading">Nuestros <span>Servicios</span></h1>
-
-  <div class="box-container">
-    <div class="box">
-      <i class="fas fa-notes-medical"></i>
-      <h3>free checkups</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.
-      </p>
-      <a href="#" class="btn">
-        learn more <span class="fas fa-chevron-right"></span>
-      </a>
-    </div>
-
-    <div class="box">
-      <i class="fas fa-ambulance"></i>
-      <h3>24/7 ambulance</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.
-      </p>
-      <a href="#" class="btn">
-        learn more <span class="fas fa-chevron-right"></span>
-      </a>
-    </div>
-
-    <div class="box">
-      <i class="fas fa-user-md"></i>
-      <h3>expert doctors</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.
-      </p>
-      <a href="#" class="btn">
-        learn more <span class="fas fa-chevron-right"></span>
-      </a>
-    </div>
-
-    <div class="box">
-      <i class="fas fa-pills"></i>
-      <h3>medicines</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.
-      </p>
-      <a href="#" class="btn">
-        learn more <span class="fas fa-chevron-right"></span>
-      </a>
-    </div>
-
-    <div class="box">
-      <i class="fas fa-procedures"></i>
-      <h3>bed facility</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.
-      </p>
-      <a href="#" class="btn">
-        learn more <span class="fas fa-chevron-right"></span>
-      </a>
-    </div>
-
-    <div class="box">
-      <i class="fas fa-heartbeat"></i>
-      <h3>total care</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, omnis.
-      </p>
-      <a href="#" class="btn">
-        learn more <span class="fas fa-chevron-right"></span>
-      </a>
-    </div>
-  </div>
-</section>
-
-<!-- services section ends -->
 
 <!-- about section starts  -->
 
@@ -150,29 +85,109 @@
 
   <div class="row">
     <div class="image">
-      <img src="image/about-img.svg" alt="" />
+      <img src="../assets/img/brainemotional.png" alt="" />
     </div>
 
     <div class="content">
-      <h3>we take care of your healthy life</h3>
+      <h3>La base para la felicidad es la salud</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure ducimus,
-        quod ex cupiditate ullam in assumenda maiores et culpa odit tempora
-        ipsam qui, quisquam quis facere iste fuga, minus nesciunt.
+        Todos merecemos ser felices Si estás lidiando con un reto en tu vida o
+        te sientes atrapada/o en patrones que se han repetido por largo tiempo y
+        no encuentras la salida, es momento de comenzar el camino hacia un lugar
+        mejor.
       </p>
       <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus vero
-        ipsam laborum porro voluptates voluptatibus a nihil temporibus deserunt
-        vel?
+        Por ello, es importante controlar nuestros niveles de estrés.
+        <strong>¿Quieres saber cómo hacerlo?</strong> No dudes en realizar este
+        test de estrés para determinar cuál es el tratamiento que mejor funciona
+        y te aporta estabilidad mental.
       </p>
       <a href="#" class="btn">
-        learn more <span class="fas fa-chevron-right"></span>
+        Realizar Test de estres <span class="fas fa-chevron-right"></span>
       </a>
     </div>
   </div>
 </section>
 
 <!-- about section ends -->
+
+<!-- services section starts  -->
+
+<section class="services" id="services">
+  <h1 class="heading">Nuestros <span>Servicios</span></h1>
+
+  <div class="box-container">
+    <div class="box">
+      <img style="width: 5em" src="../assets/img/list.png" />
+      <h3>Test de Estrés</h3>
+      <p>
+        Está conformada entre 12 a 15 preguntas diferentes esto permitirá
+        identificar algunos de los síntomas más comunes del estrés.
+      </p>
+      <a href="#" class="btn">
+        Realizar Test de Estrés <span class="fas fa-chevron-right"></span>
+      </a>
+    </div>
+
+    <div class="box">
+      <img style="width: 5em" src="../assets/img/mail.png" />
+      <h3>Contactos</h3>
+      <p>
+        HealthTest recibirá sus opiniones y sugerencias con el propósito de
+        optimizar nuestros servicios.
+      </p>
+      <a href="#book" class="btn">
+        Contactar <span class="fas fa-chevron-right"></span>
+      </a>
+    </div>
+
+    <div class="box">
+      <i class="fas fa-user-md"></i>
+      <h3>Servicios al Cliente</h3>
+      <p>
+        Encontrarás a la persona correcta podrás comunicarte con un profesional
+        (Psicólogo) para ayudar a tu niño o adolescente que buscan orientación
+        en mejorar su desarrollo personal, o necesiten apoyo en recuperar su
+        estado de salud.
+      </p>
+      <a href="#" class="btn">
+        Haz tu cita <span class="fas fa-chevron-right"></span>
+      </a>
+    </div>
+
+    <div class="box">
+      <i class="fa-solid fa-file-circle-plus"></i>
+      <h3>Documentos Adjuntados</h3>
+      <p>
+        Te damos consejos, sobre cómo ayudar a evitar el estrés o mejorar
+        nuestra salud emocional.
+      </p>
+      <a href="#blogs" class="btn">
+        Visualizar <span class="fas fa-chevron-right"></span>
+      </a>
+    </div>
+
+    <div class="box">
+      <img style="width: 5em" src="../assets/img/clipboard.png" />
+      <h3>Reportes Test de Estrés</h3>
+      <p>
+        Al tener una cuenta en HealthTest sus pruebas se guardarán. Es decir, se
+        podrá visualizar informes de pruebas anteriores.
+      </p>
+    </div>
+
+    <div class="box">
+      <i class="fa-solid fa-universal-access"></i>
+      <h3>Accessibility Menu (CTRL+U)</h3>
+      <p>
+        Mostramos un compromiso con la inclusión por lo cual ofrecemos una
+        experiencia totalmente accesible.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- services section ends -->
 
 <!-- review section starts  -->
 
