--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -189,64 +189,124 @@
 
 <!-- services section ends -->
 
+<!-- icons section starts  -->
+
+<section class="icons-container">
+  <div class="icons">
+    <img style="width: 5em" src="../assets/img/thinkfrase.png" />
+    <h4 style="font-size: 1.5rem">
+      “Si dominamos nuestra mente, vendrá la felicidad.”
+    </h4>
+    <p>Dalai Lama</p>
+  </div>
+
+  <div class="icons">
+    <img style="width: 5em" src="../assets/img/thinkfrase.png" />
+    <h4 style="font-size: 1.5rem">
+      "No es el estrés lo que nos mata, es nuestra reacción al mismo."
+    </h4>
+    <p>Hans Selye</p>
+  </div>
+
+  <div class="icons">
+    <img style="width: 5em" src="../assets/img/thinkfrase.png" />
+    <h4 style="font-size: 1.5rem">
+      "En la vida hay tiempo para todo, menos para rendirse."
+    </h4>
+    <p>Isidre Esteve</p>
+  </div>
+
+  <div class="icons">
+    <img style="width: 5em" src="../assets/img/thinkfrase.png" />
+    <h4 style="font-size: 1.5rem">
+      "El éxito es la suma de pequeños esfuerzos repetidos día tras día."
+    </h4>
+    <p>Robert Collier</p>
+  </div>
+</section>
+
+<!-- icons section ends -->
+
 <!-- review section starts  -->
 
 <section class="review" id="review">
-  <h1 class="heading">client's <span>review</span></h1>
+  <h1 class="heading">Datos <span>Curiosos</span></h1>
 
   <div class="box-container">
     <div class="box">
-      <img src="image/pic-1.png" alt="" />
-      <h3>john deo</h3>
-      <div class="stars">
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star-half-alt"></i>
+      <div class="card-img">
+        <img
+          src="https://media.cnnchile.com/sites/2/2018/10/adolescente-durmiendo-740x430.jpg"
+          alt=""
+        />
       </div>
-      <p class="text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-        sapiente nihil aperiam? Repellat sequi nisi aliquid perspiciatis libero
-        nobis rem numquam nesciunt alias sapiente minus voluptatem, reiciendis
-        consequuntur optio dolorem!
-      </p>
+      <div class="card-info">
+        <h3 style="color: black">Dormir</h3>
+
+        <p class="text" style="position: relative; top: -2em">
+          Cuando duermes tu cuerpo se repara y elimina la tensión muscular
+          causada por el estrés del día. Por eso, una de las consecuencias de
+          dormir poco es que el estrés se acumula y duplica. Esto ocasiona que
+          sea más difícil enfrentar los retos del día siguiente.
+        </p>
+      </div>
+      <div class="card-footer">
+        <a class="btn2">
+          <span class="btn-text-one">Hover me</span>
+          <span class="btn-text-two">Great!</span>
+        </a>
+      </div>
     </div>
 
     <div class="box">
-      <img src="image/pic-2.png" alt="" />
-      <h3>john deo</h3>
-      <div class="stars">
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star-half-alt"></i>
+      <div class="card-img">
+        <img
+          style="height: 12.5em"
+          src="https://i1.wp.com/lopezdoriga.com/wp-content/uploads/2019/02/video-games.jpg?fit=1200%2C645&ssl=1"
+          alt=""
+        />
       </div>
-      <p class="text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-        sapiente nihil aperiam? Repellat sequi nisi aliquid perspiciatis libero
-        nobis rem numquam nesciunt alias sapiente minus voluptatem, reiciendis
-        consequuntur optio dolorem!
-      </p>
+      <div class="card-info">
+        <h3 style="color: black">Videojuegos</h3>
+
+        <p class="text" style="position: relative; top: -2em">
+          Cuando duermes tu cuerpo se repara y elimina la tensión muscular
+          causada por el estrés del día. Por eso, una de las consecuencias de
+          dormir poco es que el estrés se acumula y duplica. Esto ocasiona que
+          sea más difícil enfrentar los retos del día siguiente.
+        </p>
+      </div>
+      <div class="card-footer">
+        <a class="btn2">
+          <span class="btn-text-one">Hover me</span>
+          <span class="btn-text-two">Great!</span>
+        </a>
+      </div>
     </div>
 
     <div class="box">
-      <img src="image/pic-3.png" alt="" />
-      <h3>john deo</h3>
-      <div class="stars">
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star"></i>
-        <i class="fas fa-star-half-alt"></i>
+      <div class="card-img">
+        <img
+          style="height: 12.5em"
+          src="https://media.lmneuquen.com/p/eac8bbf4c6d6f3cce9fc6b4c27991295/adjuntos/195/imagenes/004/148/0004148682/el-exceso-del-celular-puede-acercar-a-los-jovenes-a-la-depresionjpg.jpg"
+          alt=""
+        />
       </div>
-      <p class="text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-        sapiente nihil aperiam? Repellat sequi nisi aliquid perspiciatis libero
-        nobis rem numquam nesciunt alias sapiente minus voluptatem, reiciendis
-        consequuntur optio dolorem!
-      </p>
+      <div class="card-info">
+        <h3 style="color: black">Celular</h3>
+
+        <p class="text" style="position: relative; top: -2em">
+          La adicción a los teléfonos inteligentes predice el desarrollo de
+          síntomas depresivos.Por lo cual ha empeorado las relaciones con los
+          demás y ha disminuido las habilidades sociales.
+        </p>
+      </div>
+      <div class="card-footer">
+        <a class="btn2">
+          <span class="btn-text-one">Hover me</span>
+          <span class="btn-text-two">Great!</span>
+        </a>
+      </div>
     </div>
   </div>
 </section>
@@ -277,27 +337,22 @@
           <div class="w-dyn-list">
             <div role="list" class="w-dyn-items">
               <div role="listitem" class="w-dyn-item">
-                <a
-                  href="/projects/datadash-product-design"
-                  class="project-slide-link-block w-inline-block"
-                >
+                <a class="project-slide-link-block w-inline-block">
                   <div class="project-slider-image-wrapper">
                     <img
-                      src="https://assets.website-files.com/5ff05a7bd62f16808f485280/6077dcc78ec31466630c033f_image_processing20200129-19798-1k8ponz%202-min.png"
+                      src="https://vcm.emol.com/wp-content/uploads/2019/01/tomar-agua-wordpress-768x457.jpg"
                       loading="lazy"
                       alt=""
                       sizes="(max-width: 479px) 90vw, (max-width: 767px) 363.578125px, (max-width: 991px) 366.4375px, (max-width: 1279px) 37vw, (max-width: 1439px) 34vw, 486px"
-                      srcset="
-                        https://assets.website-files.com/5ff05a7bd62f16808f485280/6077dcc78ec31466630c033f_image_processing20200129-19798-1k8ponz%202-min-p-500.png  500w,
-                        https://assets.website-files.com/5ff05a7bd62f16808f485280/6077dcc78ec31466630c033f_image_processing20200129-19798-1k8ponz%202-min.png       1160w
-                      "
                       class="image"
                     />
                   </div>
                   <div class="project-slider-content">
                     <div class="project-slider-tags-wrapper">
                       <div class="project-slider-tag-text-wrapper">
-                        <h6 class="project-slider-tag-text">Product Design</h6>
+                        <h6 class="project-slider-tag-text">
+                          Hábitos de una vida saludable
+                        </h6>
                       </div>
                       <div class="project-slider-tag-text-wrapper">
                         <h6
@@ -307,18 +362,13 @@
                     </div>
                     <div class="project-slider-heading-wrapper">
                       <h5 class="project-slider-heading">
-                        Datadash Product design
+                        El rol del agua para gestionar el estrés
                       </h5>
                     </div>
                     <div class="view-project-div">
-                      <div class="text-block _18px">View Project</div>
-                      <div class="view-project-arrow-wrapper">
-                        <img
-                          src="https://assets.website-files.com/5fef5619b640934b33c2385e/5ff019fc559a4200eda62273_Vector.svg"
-                          loading="lazy"
-                          alt=""
-                          class="view-project-arrow"
-                        />
+                      <div class="text-block _18px">
+                        beber agua es una herramienta muy eficiente para calmar
+                        ese estado de intranquilidad.
                       </div>
                     </div>
                   </div>
@@ -331,43 +381,36 @@
           <div class="w-dyn-list">
             <div role="list" class="w-dyn-items">
               <div role="listitem" class="w-dyn-item">
-                <a
-                  href="/projects/maize-website-design"
-                  class="project-slide-link-block w-inline-block"
-                >
+                <a class="project-slide-link-block w-inline-block">
                   <div class="project-slider-image-wrapper">
                     <img
-                      src="https://assets.website-files.com/5ff05a7bd62f16808f485280/6077dcd635f7f176db9fef1e_image_processing20200129-19798-1k8ponz%203-min.png"
+                      src="https://www.tusaladeespera.es/wp-content/uploads/2019/06/dieta-equilibrada_56_1-1024x683.jpg"
                       loading="lazy"
                       alt=""
                       sizes="(max-width: 479px) 90vw, (max-width: 767px) 363.578125px, (max-width: 991px) 366.4375px, (max-width: 1279px) 37vw, (max-width: 1439px) 34vw, 486px"
-                      srcset="
-                        https://assets.website-files.com/5ff05a7bd62f16808f485280/6077dcd635f7f176db9fef1e_image_processing20200129-19798-1k8ponz%203-min-p-500.png  500w,
-                        https://assets.website-files.com/5ff05a7bd62f16808f485280/6077dcd635f7f176db9fef1e_image_processing20200129-19798-1k8ponz%203-min.png       1160w
-                      "
                       class="image"
                     />
                   </div>
                   <div class="project-slider-content">
                     <div class="project-slider-tags-wrapper">
                       <div class="project-slider-tag-text-wrapper">
-                        <h6 class="project-slider-tag-text">Web Design</h6>
+                        <h6 class="project-slider-tag-text">
+                          Hábitos de una vida saludable
+                        </h6>
                       </div>
                     </div>
                     <div class="project-slider-heading-wrapper">
                       <h5 class="project-slider-heading">
-                        Maize Website Design
+                        Crear un plan de alimentación saludable
                       </h5>
                     </div>
                     <div class="view-project-div">
-                      <div class="text-block _18px">View Project</div>
-                      <div class="view-project-arrow-wrapper">
-                        <img
-                          src="https://assets.website-files.com/5fef5619b640934b33c2385e/5ff019fc559a4200eda62273_Vector.svg"
-                          loading="lazy"
-                          alt=""
-                          class="view-project-arrow"
-                        />
+                      <div class="text-block _18px">
+                        Proporcionar a tu cuerpo macronutrientes (proteínas,
+                        grasas saludables, carbohidratos) le permitirá funcionar
+                        correctamente, lo que resultará en un mejor estado de
+                        ánimo y rendimiento en el trabajo y en la vida
+                        cotidiana.
                       </div>
                     </div>
                   </div>
@@ -380,27 +423,22 @@
           <div class="w-dyn-list">
             <div role="list" class="w-dyn-items">
               <div role="listitem" class="w-dyn-item">
-                <a
-                  href="/projects/gorillax-branding"
-                  class="project-slide-link-block w-inline-block"
-                >
+                <a class="project-slide-link-block w-inline-block">
                   <div class="project-slider-image-wrapper">
                     <img
-                      src="https://assets.website-files.com/5ff05a7bd62f16808f485280/6077dce7ec07854a8c820c4e_image_processing20200129-19798-1k8ponz%204-min.png"
+                      src="http://2.bp.blogspot.com/-AQcqt9Chuyc/Tm-qS54nLfI/AAAAAAAAADk/mTno4pEniWc/s1600/relacion.jpg"
                       loading="lazy"
                       alt=""
                       sizes="(max-width: 479px) 90vw, (max-width: 767px) 363.578125px, (max-width: 991px) 366.4375px, (max-width: 1279px) 37vw, (max-width: 1439px) 34vw, 486px"
-                      srcset="
-                        https://assets.website-files.com/5ff05a7bd62f16808f485280/6077dce7ec07854a8c820c4e_image_processing20200129-19798-1k8ponz%204-min-p-500.png  500w,
-                        https://assets.website-files.com/5ff05a7bd62f16808f485280/6077dce7ec07854a8c820c4e_image_processing20200129-19798-1k8ponz%204-min.png       1160w
-                      "
                       class="image"
                     />
                   </div>
                   <div class="project-slider-content">
                     <div class="project-slider-tags-wrapper">
                       <div class="project-slider-tag-text-wrapper">
-                        <h6 class="project-slider-tag-text">Branding</h6>
+                        <h6 class="project-slider-tag-text">
+                          Hábitos de una vida saludable
+                        </h6>
                       </div>
                       <div class="project-slider-tag-text-wrapper">
                         <h6
@@ -409,17 +447,16 @@
                       </div>
                     </div>
                     <div class="project-slider-heading-wrapper">
-                      <h5 class="project-slider-heading">GorillaX Branding</h5>
+                      <h5 class="project-slider-heading">
+                        Rodéate de gente que positiva y optimista
+                      </h5>
                     </div>
                     <div class="view-project-div">
-                      <div class="text-block _18px">View Project</div>
-                      <div class="view-project-arrow-wrapper">
-                        <img
-                          src="https://assets.website-files.com/5fef5619b640934b33c2385e/5ff019fc559a4200eda62273_Vector.svg"
-                          loading="lazy"
-                          alt=""
-                          class="view-project-arrow"
-                        />
+                      <div class="text-block _18px">
+                        Mantener relaciones sanas estimula nuestro estado
+                        emocional y potencia nuestro sentido de pertenencia; nos
+                        permite intercambiar ideas y expandir nuestra mente a
+                        través de las relaciones con los demás.
                       </div>
                     </div>
                   </div>
@@ -432,33 +469,32 @@
           <div class="w-dyn-list">
             <div role="list" class="w-dyn-items">
               <div role="listitem" class="w-dyn-item">
-                <a href="#" class="project-slide-link-block w-inline-block">
+                <a>
                   <div class="project-slider-image-wrapper">
                     <img
-                      src="https://assets.website-files.com/5ff05a7bd62f16808f485280/6077dcf54baced26f174226f_image_processing20200129-19798-1k8ponz%2014-min.png"
+                      src="https://idemsport.com/wp-content/uploads/2020/08/01.jpg"
                       loading="lazy"
                       alt=""
                       sizes="(max-width: 479px) 90vw, (max-width: 767px) 363.578125px, (max-width: 991px) 366.4375px, (max-width: 1279px) 37vw, (max-width: 1439px) 34vw, 486px"
-                      srcset="
-                        https://assets.website-files.com/5ff05a7bd62f16808f485280/6077dcf54baced26f174226f_image_processing20200129-19798-1k8ponz%2014-min-p-500.png  500w,
-                        https://assets.website-files.com/5ff05a7bd62f16808f485280/6077dcf54baced26f174226f_image_processing20200129-19798-1k8ponz%2014-min.png       1160w
-                      "
                       class="image"
                     />
                   </div>
                   <div class="project-slider-content">
                     <div class="project-slider-tags-wrapper">
                       <div class="project-slider-tag-text-wrapper">
-                        <h6 class="project-slider-tag-text">Web Design</h6>
+                        <h6 class="project-slider-tag-text">
+                          Hábitos de una vida saludable
+                        </h6>
                       </div>
                     </div>
                     <div class="project-slider-heading-wrapper">
-                      <h5 class="project-slider-heading">
-                        Joggr Website Design
-                      </h5>
+                      <h5 class="project-slider-heading">Realizar Deporte</h5>
                     </div>
                     <div class="view-project-div">
-                      <div class="text-block _18px">View Project</div>
+                      <div class="text-block _18px">
+                        Hacer ejercicio puede mejorar la salud mental ayudando
+                        al cerebro a sobrellevar mejor el estrés.
+                      </div>
                       <div class="view-project-arrow-wrapper">
                         <img
                           src="https://assets.website-files.com/5fef5619b640934b33c2385e/5ff019fc559a4200eda62273_Vector.svg"
