--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -150,7 +150,11 @@
         en mejorar su desarrollo personal, o necesiten apoyo en recuperar su
         estado de salud.
       </p>
-      <a href="#" class="btn">
+      <a
+        href="https://api.whatsapp.com/send/?phone=593984772266&text=Hola%2C+%C2%BFc%C3%B3mo+podemos+ayudarte%3F+Env%C3%ADanos+un+mensaje+&type=phone_number&app_absent=0"
+        class="btn"
+        target="_blank"
+      >
         Haz tu cita <span class="fas fa-chevron-right"></span>
       </a>
     </div>
@@ -190,42 +194,6 @@
 <!-- services section ends -->
 
 <!-- icons section starts  -->
-
-<section class="icons-container">
-  <div class="icons">
-    <img style="width: 5em" src="../assets/img/thinkfrase.png" />
-    <h4 style="font-size: 1.5rem">
-      “Si dominamos nuestra mente, vendrá la felicidad.”
-    </h4>
-    <p>Dalai Lama</p>
-  </div>
-
-  <div class="icons">
-    <img style="width: 5em" src="../assets/img/thinkfrase.png" />
-    <h4 style="font-size: 1.5rem">
-      "No es el estrés lo que nos mata, es nuestra reacción al mismo."
-    </h4>
-    <p>Hans Selye</p>
-  </div>
-
-  <div class="icons">
-    <img style="width: 5em" src="../assets/img/thinkfrase.png" />
-    <h4 style="font-size: 1.5rem">
-      "En la vida hay tiempo para todo, menos para rendirse."
-    </h4>
-    <p>Isidre Esteve</p>
-  </div>
-
-  <div class="icons">
-    <img style="width: 5em" src="../assets/img/thinkfrase.png" />
-    <h4 style="font-size: 1.5rem">
-      "El éxito es la suma de pequeños esfuerzos repetidos día tras día."
-    </h4>
-    <p>Robert Collier</p>
-  </div>
-</section>
-
-<!-- icons section ends -->
 
 <!-- review section starts  -->
 
@@ -270,10 +238,11 @@
         <h3 style="color: black">Videojuegos</h3>
 
         <p class="text" style="position: relative; top: -2em">
-          Cuando duermes tu cuerpo se repara y elimina la tensión muscular
-          causada por el estrés del día. Por eso, una de las consecuencias de
-          dormir poco es que el estrés se acumula y duplica. Esto ocasiona que
-          sea más difícil enfrentar los retos del día siguiente.
+          La naturaleza competitiva de los videojuegos puede hacernos sentir
+          estresados, enojados o frustrados. El uso indiscriminado de los
+          videojuegos no solo afectan nuestras habilidades sociales, sino que
+          también aumentan los niveles de cortisol, una hormona esteroide que es
+          un indicador de estrés.
         </p>
       </div>
       <div class="card-footer">
@@ -316,6 +285,17 @@
 <!-- boton que desliza para arriba -->
 <span class="arriba bx bxs-up-arrow"></span>
 <!-- Fin del boton que desliza para arriba -->
+
+<!-- boton del wassap -->
+<a
+  style="top: 13em; right: 0.2em"
+  href="https://api.whatsapp.com/send/?phone=593984772266&text=Hola%2C+%C2%BFc%C3%B3mo+podemos+ayudarte%3F+Env%C3%ADanos+un+mensaje+&type=phone_number&app_absent=0"
+  class="btn-wsp"
+  target="_blank"
+>
+  <i class="fa fa-whatsapp icono"></i>
+</a>
+<!-- Fin del boton del wassap -->
 
 <div class="case-studies-section wf-section">
   <div class="wrapper project-slider">
@@ -448,7 +428,7 @@
                     </div>
                     <div class="project-slider-heading-wrapper">
                       <h5 class="project-slider-heading">
-                        Rodéate de gente que positiva y optimista
+                        Rodéate de gente positiva y optimista
                       </h5>
                     </div>
                     <div class="view-project-div">
@@ -586,7 +566,9 @@
               data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
               href="https://www.anahana.com/es/mental-health/stress-management-for-teens#:~:text=Por%20lo%20tanto%2C%20las%20mejores%20herramientas%20que%20un,comenzar.%20%C2%BFQu%C3%A9%20causa%20la%20ansiedad%20en%20los%20adolescentes%3F"
               class="blog-section-blog-item-wrapper w-inline-block"
+              target="_blank"
             >
+              <!-- ========== _blank abre otras pestañas ========== -->
               <div class="blog-item-date-and-time-wrapper">
                 <div>
                   <div class="text-block">Agosto 23, 2021</div>
@@ -610,6 +592,7 @@
               data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
               href="https://www.biobiochile.cl/noticias/blogs/blog-ubo/2020/12/23/efecto-de-pandemia-de-covid-19-trastorno-de-estres-postraumatico-en-el-cerebro-de-los-adolescentes.shtml"
               class="blog-section-blog-item-wrapper w-inline-block"
+              target="_blank"
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
@@ -641,6 +624,7 @@
               data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
               href="https://blog.up.edu.mx/prepaup/femenil/tecnicas-para-combatir-el-estres-en-la-adolescencia"
               class="blog-section-blog-item-wrapper w-inline-block"
+              target="_blank"
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
@@ -669,6 +653,7 @@
               data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
               href="https://kidshealth.org/SeattleCH/es/parents/stress.html"
               class="blog-section-blog-item-wrapper w-inline-block"
+              target="_blank"
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
@@ -693,6 +678,7 @@
               data-w-id="746c52b2-eb33-9827-9714-953f54c5c0c6"
               href="https://www.elesquiu.com/curiosidades/2022/12/31/estres-actividades-que-ayudan-superarlo-460982.html"
               class="blog-section-blog-item-wrapper w-inline-block"
+              target="_blank"
             >
               <div class="blog-item-date-and-time-wrapper">
                 <div class="blog-item-date-wrapper">
