--- a/src/assets/CSS/stylepagprincipal.css
+++ b/src/assets/CSS/stylepagprincipal.css
@@ -667,11 +667,6 @@ button:focus:not(:focus-visible) {
   padding-top: 10%;
 }
 
-svg {
-  width: 20px;
-  height: 20px;
-}
-
 .card-footer {
   width: 100%;
   display: flex;
@@ -682,11 +677,6 @@ svg {
 }
 
 /*Text*/
-.text-title {
-  font-weight: 900;
-  font-size: 1.2em;
-  line-height: 1.5;
-}
 
 .text-body {
   font-size: 0.9em;
@@ -759,4 +749,34 @@ svg {
 
 .btn2:hover .btn-text-two {
   top: 50%;
+}
+
+/*Boton del wassap*/
+.btn-wsp {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  line-height: 63px;
+  bottom: 25px;
+  right: 25px;
+  background: #25d366;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 35px;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+  z-index: 100;
+  transition: all 300ms ease;
+}
+.btn-wsp:hover {
+  background: #fff;
+  color: #20ba5a;
+}
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  .btn-wsp {
+    width: 63px;
+    height: 63px;
+    top: 13em;
+    line-height: 66px;
+  }
 }
