--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -197,6 +197,52 @@
 
 <!-- review section starts  -->
 
+<!-- about section starts  -->
+
+<section class="about" id="about">
+  <h1 class="heading"><span>Reserva</span> Tu cita</h1>
+
+  <div class="row">
+    <div class="content">
+      <h5>Inicia tu terapia psicológica en 3 sencillos pasos</h5>
+      <br />
+      <img
+        style="width: 5em"
+        src="https://cdn-icons-png.flaticon.com/512/599/599613.png?w=740&t=st=1673723472~exp=1673724072~hmac=3e166fabd8df80b1575a18adabafe95a6568211980f93113540a9d6b5b422647"
+      />
+      <h6 style="position: relative; right: -1em">Paso 1. Envía un mensaje</h6>
+      <p>Contáctanos y cuéntanos tus desafíos.</p>
+      <br />
+      <img
+        style="width: 5em"
+        src="https://cdn-icons-png.flaticon.com/512/1253/1253821.png?w=740&t=st=1673643420~exp=1673644020~hmac=e97aa5c362ea35fb849a6e41516d7c02ecad983bd384bf6551496a829dcc72bb"
+      />
+      <h6 style="position: relative; right: -1em">Paso 2. Selecciona el Día</h6>
+      <p>Elige la fecha y hora de tratamiento que más te convenga.</p>
+      <br />
+      <img
+        style="width: 5em"
+        src="https://cdn-icons-png.flaticon.com/512/1211/1211794.png"
+      />
+      <h6 style="position: relative; right: -1em">Paso 3. Alcanza la Cima</h6>
+      <p>
+        Seleccionaremos al terapeuta perfecto para guiarte y esperarte en tu
+        primera cita.
+      </p>
+      <a
+        href="https://api.whatsapp.com/send/?phone=593984772266&text=Hola%2C+%C2%BFc%C3%B3mo+podemos+ayudarte%3F+Env%C3%ADanos+un+mensaje+&type=phone_number&app_absent=0"
+        class="btn"
+        target="_blank"
+      >
+        Haz tu cita <span class="fas fa-chevron-right"></span>
+      </a>
+    </div>
+    <div class="image">
+      <img src="../assets/img/Cita.svg" alt="" />
+    </div>
+  </div>
+</section>
+
 <section class="review" id="review">
   <h1 class="heading">Datos <span>Curiosos</span></h1>
 
