--- a/src/assets/CSS/stylepagprincipal.css
+++ b/src/assets/CSS/stylepagprincipal.css
@@ -374,8 +374,6 @@ section:nth-child(even) {
   background: #fff;
   text-align: center;
   position: relative;
-  overflow: hidden;
-  z-index: 0;
 }
 
 .review .box-container .box h3 {
@@ -778,5 +776,74 @@ button:focus:not(:focus-visible) {
     height: 63px;
     top: 13em;
     line-height: 66px;
+  }
+}
+
+/*segundo intento*/
+.box-container .video-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: center;
+  padding: 10px;
+}
+
+.box-container .video-container .video {
+  height: 250px;
+  width: 350px;
+  border: 5px solid #fff;
+  border-radius: 5px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.7);
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.box-container .video-container .video video {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  transition: 0.2s linear;
+}
+
+.box-container .video-container .video:hover video {
+  transform: scale(1.1);
+}
+
+.box-container .popup-video {
+  position: fixed;
+
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.8);
+  height: 100%;
+  width: 100%;
+  display: none;
+}
+
+.box-container .popup-video video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 750px;
+  border-radius: 5px;
+  border: 3px solid #fff;
+  object-fit: cover;
+}
+
+.box-container .popup-video span {
+  position: relative;
+  top: 2em;
+  right: -13em;
+  font-size: 50px;
+  color: #fff;
+  font-weight: bolder;
+  z-index: 100;
+  cursor: pointer;
+}
+@media (max-width: 768px) {
+  .box-container .popup-video video {
+    width: 95%;
   }
 }
