--- a/src/assets/CSS/stylepagprincipal.css
+++ b/src/assets/CSS/stylepagprincipal.css
@@ -847,3 +847,121 @@ button:focus:not(:focus-visible) {
     width: 95%;
   }
 }
+
+/*botom 3 para reproducir el segundo video */
+.btn3 {
+  width: 140px;
+  height: 50px;
+  background: linear-gradient(to top, #00154c, #12376e, #23487f);
+  color: #fff;
+  border-radius: 50px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  position: relative;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+}
+
+.btn3:hover .btn-text-one {
+  top: -100%;
+}
+
+.btn3:hover .btn-text-two {
+  top: 50%;
+}
+
+/*Video 2*/
+
+.box-container .popup-video2 {
+  position: fixed;
+
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.8);
+  height: 100%;
+  width: 100%;
+  display: none;
+}
+
+.box-container .popup-video2 video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 750px;
+  border-radius: 5px;
+  border: 3px solid #fff;
+  object-fit: cover;
+}
+
+.box-container .popup-video2 span {
+  position: relative;
+  top: 2em;
+  right: -13em;
+  font-size: 50px;
+  color: #fff;
+  font-weight: bolder;
+  z-index: 100;
+  cursor: pointer;
+}
+
+/*botom 4 para reproducir el tercer video */
+.btn4 {
+  width: 140px;
+  height: 50px;
+  background: linear-gradient(to top, #00154c, #12376e, #23487f);
+  color: #fff;
+  border-radius: 50px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  position: relative;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+}
+
+.btn4:hover .btn-text-one {
+  top: -100%;
+}
+
+.btn4:hover .btn-text-two {
+  top: 50%;
+}
+
+/*Video 2*/
+
+.box-container .popup-video3 {
+  position: fixed;
+
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0.8);
+  height: 100%;
+  width: 100%;
+  display: none;
+}
+
+.box-container .popup-video3 video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 750px;
+  border-radius: 5px;
+  border: 3px solid #fff;
+  object-fit: cover;
+}
+
+.box-container .popup-video3 span {
+  position: relative;
+  top: 2em;
+  right: -13em;
+  font-size: 50px;
+  color: #fff;
+  font-weight: bolder;
+  z-index: 100;
+  cursor: pointer;
+}
